--- a/style.css
+++ b/style.css
@@ -7,8 +7,19 @@ body{
 }
 
 #content{
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
+}
+
+#header{
   width: 100%;
+  height: 8%;
+  background-color: #222222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+  font-weight: bold;
 }
 
 #main{
@@ -16,8 +27,26 @@ body{
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80%;
+  height: 88%;
   flex-direction: column;
+}
+
+#footer{
+  height: 4%;
+  width: 100%;
+  background-color: #222222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#link{
+  text-decoration: none;
+  color: #CCCCCC;
+}
+
+#link:hover{
+  font-weight: bold;
 }
 
 #gb-frame{
@@ -25,23 +54,53 @@ body{
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: repeat(3,1fr);
   border: solid 2px #CCCCCC;
+  height: 32rem;
+  width: 32rem;
 }
 
-.cell{
-  color: #2E86AB;
+#info{
+  height: 5rem;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#player-one-name,
+#player-two-name{
+  font-size: 2rem;
+  width: 22rem;
+  height: 3rem;
   background-color: #222222;
-  border: 1px solid #CCCCCC;
-  height: 50px;
-  width: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
+  border: 1px solid #cccccc3b;
+}
+
+#result{
+  font-size: 2.5rem;
+  font-weight: bold;  
+}
+
+.cell{
+  background-color: #222222;
+  border: 1px solid #CCCCCC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 6rem;
+}
+
+.cell:hover{
+  background-color: #292929;
+  cursor: pointer;
 }
 
 .win-cell{
-  background-color: #070707;
+  background-color: #1a1a1a;
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 6.4rem;
 }
 
 .player-one-mark{
@@ -50,4 +109,21 @@ body{
 
 .player-two-mark{
   color:  #FF3E4D;
+}
+
+#restart{
+  margin-top: 2rem;
+  height: 3rem;
+  width: 12rem;
+  background-color: #222222;
+  border: 1px solid #CCCCCC;
+  font-size: 1.5rem;
+  color:  #CCCCCC;
+}
+
+#restart:hover{
+  background-color: #1a1a1a;
+  font-weight: bold;
+  border: 2px solid #CCCCCC;
+  cursor: pointer;
 }
